[metadata]
name = django-yarr
description = A lightweight customisable RSS reader for Django
long_description = file: README.rst
keywords = django rss
author = Richard Terry
author_email = code@radiac.net
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
url = https://radiac.net/projects/django-yarr/
project_urls =
    Documentation = https://radiac.net/projects/django-yarr/
    Source = https://github.com/radiac/django-yarr
    Tracker = https://github.com/radiac/django-yarr/issues

[options]
python_requires = >=3.7
packages = find:
install_requires =
    Django>=2.2
    django-yaa-settings
    bleach[css]>=5.0.0
    feedparser>=6.0.0
include_package_data = true
zip_safe = false

[options.packages.find]
exclude = tests*

[tool:pytest]
addopts = --black --flake8 --isort --cov=yarr --cov-report=term --cov-report=html
testpaths =
    tests
    yarr
    example
DJANGO_SETTINGS_MODULE = tests.settings

[flake8]
max-line-length = 88
ignore = E123,E128,E203,E231,E266,E501,W503
exclude = .tox,.git,*/static/CACHE/*,docs,node_modules,static_root,tmp

[isort]
multi_line_output = 3
line_length = 88
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2
skip = .git,node_modules,.tox

[coverage:report]
omit=example

[doc8]
max-line-length = 88
ignore-path = *.txt,.tox,node_modules
